{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 8,
  "lineage": "e31c902f-db83-1205-f06f-5f99893b6e21",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868917999126:internet-gateway/igw-03897c543254eb01f",
            "id": "igw-03897c543254eb01f",
            "owner_id": "868917999126",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "tags_all": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-0133ecbb8be6d2019"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868917999126:route-table/rtb-09a6c4ecaabaa1ffa",
            "id": "rtb-09a6c4ecaabaa1ffa",
            "owner_id": "868917999126",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03897c543254eb01f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_tabls-main"
            },
            "tags_all": {
              "Name": "Terraform_Main_tabls-main"
            },
            "timeouts": null,
            "vpc_id": "vpc-0133ecbb8be6d2019"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "868917999126",
            "id": "rtb-09a6c4ecaabaa1ffa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057aafe145888c144",
            "region": "us-east-1",
            "route_table_id": "rtb-09a6c4ecaabaa1ffa",
            "subnet_id": "subnet-0cb99b373d1fc9568"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868917999126:security-group/sg-0375889bc680d0fd4",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0375889bc680d0fd4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "868917999126",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0133ecbb8be6d2019"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "868917999126",
            "id": "sg-0375889bc680d0fd4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868917999126:subnet/subnet-0cb99b373d1fc9568",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb99b373d1fc9568",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868917999126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Terraform_Public_Subnets-main"
            },
            "tags_all": {
              "Name": "Terraform_Public_Subnets-main"
            },
            "vpc_id": "vpc-0133ecbb8be6d2019"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "868917999126",
            "id": "subnet-0cb99b373d1fc9568",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868917999126:vpc/vpc-0133ecbb8be6d2019",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b4e59e753753048f",
            "default_route_table_id": "rtb-02a5457160f8e7fa5",
            "default_security_group_id": "sg-03f57157ef36e5a3b",
            "dhcp_options_id": "dopt-09c03e4f41ede02d2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0133ecbb8be6d2019",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a5457160f8e7fa5",
            "owner_id": "868917999126",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-aws-main",
              "Owner": "Jonathan"
            },
            "tags_all": {
              "Name": "terraform-aws-main",
              "Owner": "Jonathan"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "868917999126",
            "id": "vpc-0133ecbb8be6d2019",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}